--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,6 @@
 :root {
-  --background: #ffffff;
+  --background: linear-gradient(90deg, rgb(0,212,255) 0%, rgb(9,9,121) 35%, rgb(0,212,255) 100%);
+
   --foreground: #171717;
 }
 
@@ -14,6 +15,8 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  
+
 }
 
 body {
@@ -40,3 +43,42 @@ a {
     color-scheme: dark;
   }
 }
+
+
+
+.heading{
+  text-align: center;
+  font-size: 30px;
+  font-style: italic;
+  border-radius: 25px;
+  background: #218cad;
+  margin: 20px;
+  padding: 30px;
+  text-shadow: 2px 2px rgb(9,9,121);
+
+  width: auto;
+  
+  height: auto;
+}
+
+
+
+.input{
+  text-align: center;
+}
+
+.items{
+  text-align: center;
+}
+::placeholder{
+  font-size: 30px;
+}
+
+
+
+
+
+
+
+
+
